Cover EthereumBlockSplit with tests and clean it up (#7)
* Cover EthereumBlockSplit with tests and clean it up

* Add missing license header for EthereumBlockSplitTest.java